fix: fullscreen graph stretches to edges

--- a/app/styles/main.styl
+++ b/app/styles/main.styl
@@ -173,12 +173,9 @@ p.lead
     .btn-group
       absolute: bottom 0 right 12px
   .view-result
+    stretch()
     position: absolute
-    top: 39px
     overflow-y: scroll
-    left: 0
-    right: 0
-    bottom: 39px
 
 .view-keys
   padding: 10px
