--- a/app/styles/stream.styl
+++ b/app/styles/stream.styl
@@ -24,7 +24,6 @@
       border: 1px solid #D2D7DD
       border-radius: 3px
       background-color: #fff
-      overflow: hidden
 
       pre
         font-family: mono-font-family
@@ -36,7 +35,6 @@
 
       .view-result
         position: relative
-        overflow-y: auto
         height: auto
         background: #F8F9FB
         z-index: 10
